# rl-examples

./: .gitignore  2-bandits.lua  4.3-car-rent.lua  4.4-gambler.lua  TODO  bandits.lua  dynamic.lua  nix-activate.sh  plotter.lua
C++/: MC.cpp  plot1.gnuplot
Haskell/: Ch_4_DP.hs  Ch_4_Gambler.hs  Ch_4_GridWorld.hs  DP.hs  Examples.hs  Imports.hs  MC.hs  Main.hs  Monad.hs  Monad1.hs  TickTackToe.hs  Types.hs  Util.hs  rl-examples.cabal
Haskell/Control/Monad/: Rnd.hs
Haskell/Graphics/: TinyPlot.hs
Haskell/MC/: ES.hs  Types.hs
Haskell/Monad/: Rnd.hs
Haskell/RL/: Imports.hs  MC.hs  Q.hs  Types.hs
Haskell/RL/MC/: ES.hs
Lua/: 4.4-gambler.lua
